# ThunderAI

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  conftest.py  minimal-requirements.txt  new-requirements.txt  package-lock.json  package.json  project_structure  pyproject.toml  pyvenv.cfg  report.html  requirements-macos.txt  requirements-ml.txt  requirements.txt  setup.py  setup.sh  start_server.py  uvicorn.config.py
backend/: main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  temp_install.sh
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/core/: config.py  deps.py  password.py  security.py
backend/app/db/: base.py  deps.py  mongodb.py  session.py
backend/app/ml/data/: augmentation.py
backend/app/ml/evaluation/: evaluator.py  model_explainer.py
backend/app/ml/models/: advanced_transformer.py  advanced_vision.py  base.py  transformer.py  vision.py
backend/app/ml/training/: advanced_trainer.py  trainer.py
backend/app/models/: experiment.py  project.py  user.py
backend/app/models/llm/: model.py
backend/app/schemas/: auth.py  experiment.py  llm.py  metrics.py  project.py  settings.py  token.py  user.py
backend/app/services/: auth_service.py  experiment_service.py  llm_service.py  model_service.py  settings_service.py  user_service.py
backend/app/services/llm/: model_service.py
backend/scripts/: check_users.py  create_test_user.py  init_db.py
backend/static/css/: style.css
backend/static/js/: main.js
backend/templates/: index.html
backend/venv311/: pyvenv.cfg
(+341 files in other folders)
