[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thunderai"
version = "0.1.0"
authors = [
  { name = "ThunderAI Team" },
]
description = "A machine learning API platform with comprehensive monitoring"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    "python-json-logger>=2.0.7",
    "psutil>=5.9.6",
    "prometheus-client>=0.19.0",
    "aiohttp>=3.9.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.1",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3
